2003-04-11  Christophe Fergeau  <teuf@users.sourceforge.net>

	* test/test-uri.c: added regression test for
	  gnome_vfs_uri_make_full_from_relative

2003-04-11  Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-i18n.c (read_aliases): make it work
	* libgnomevfs/gnome-vfs-utils.c: removed bogus 
	  #ifndef GNOME_VFS_DISABLE_DEPRECATED

2003-04-11  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* libgnomevfs/gnome-vfs-init.c (gnome_vfs_init): call bindtextdomain
	inside #ifdef ENABLE_NLS. Fixes bug #110213.

2003-04-11  Michael Meeks  <michael@ximian.com>

	* test/test-shell.c (authentication_callback, main):
	hook up some really dumb authentication bits.

2003-04-11  Alexander Larsson  <alexl@redhat.com>

	* test/test-async.c (file_control_callback):
	Don't double free operation_data.

2003-04-09  Michael Meeks  <michael@ximian.com>

	* libgnomevfs/gnome-vfs-module-callback.h: add
	G_BEGIN/END_DECLS for my C++

2003-04-05  Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-uri.c
	* libgnomevfs/gnome-vfs-utils.c
	* libgnomevfs/gnome-vfs-utils.h: removed duplicated code, deprecated
	gnome_vfs_make_uri_full_from_relative, use 
	gnome_vfs_uri_make_full_from_relative instead

2003-04-04  Christophe Fergeau  <teuf@users.sourceforge.net>

	* modules/fstype.c: don't try to call getmntent with a NULL parameter
	if mtab is non-existent. Fixes bug #106950

2003-04-03  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* libgnomevfs/gnome-vfs-mime-info.c (gnome_vfs_mime_set_extensions_list):
	Set the deleted key to "" if it exists before resetting ext key.
	Fixes bug #109795.

2003-04-02  Shailesh Mittal  <shailesh.mittal@wipro.com>

	* configure.in :
	Added option for enabling IPv6 support, and only enabling
	IPv6 support if AF_INET6 and function getaddrinfo are
	defined there.

	* libgnomevfs/gnome-vfs-inet-connection.c :
	Added a field addr6 of #sockaddr_in6 type in structure
	GnomeVFSInetConnection, for holding IPv6 address.