@@ -64,8 +64,6 @@
 #include <unistd.h>
 #include <netdb.h>
 
-#define EAZEL_XML_NS "http://services.eazel.com/namespaces"
-
 #ifdef DEBUG_HTTP_ENABLE
 void
 http_debug_printf (char *fmt, ...)
@@ -86,16 +84,10 @@ http_debug_printf (char *fmt, ...)
 	g_free (out);
 	va_end (args);
 }
-
-#define DEBUG_HTTP(x) my_debug_printf x
-
-/* #define ANALYZE_HTTP(x) my_debug_printf (x) */
-#define ANALYZE_HTTP(x) 
-
 #endif /* DEBUG_HTTP_ENABLE */
 
 /* What do we qualify ourselves as?  */
-/* FIXME bugzilla.eazel.com 1160: "gnome-vfs/1.0.0" may not be good. */
+/* FIXME bugzilla.gnome.org 41160: "gnome-vfs/1.0.0" may not be good. */
 #define USER_AGENT_STRING 	"gnome-vfs/" VERSION
 
 /* Custom User-Agent environment variable */
@@ -378,7 +370,7 @@ http_status_to_vfs_result (guint status)
 	if (HTTP_20X (status))
 		return GNOME_VFS_OK;
 
-	/* FIXME bugzilla.eazel.com 1163 */
+	/* FIXME bugzilla.gnome.org 41163 */
 	/* mfleming--I've improved the situation slightly, but more
 	 * test cases need to be written to ensure that HTTP (esp DAV) does compatibile
 	 * things with the normal file method
@@ -1453,7 +1445,6 @@ make_request (HttpFileHandle **handle_return,
 			socket_buffer = NULL;
 			break;
 		}
-
 		if ((*handle_return)->server_status == HTTP_STATUS_UNAUTHORIZED) {
 			if (! check_authn_retry_request (*handle_return, AuthnHeader_WWW, authn_header_request)) {
 				break;
@@ -1598,7 +1589,7 @@ do_create (GnomeVFSMethod *method,
 	if (result != GNOME_VFS_OK) {
 		/* the PUT failed */
 		
-		/* FIXME bugzilla.eazel.com 5131
+		/* FIXME bugzilla.gnome.org 45131
 		 * If you PUT a file with an invalid name to Xythos, it 
 		 * returns a 403 Forbidden, which is different from the behaviour
 		 * in MKCOL or MOVE.  Unfortunately, it is not possible to discern whether 
@@ -1616,7 +1607,7 @@ do_create (GnomeVFSMethod *method,
 	/* clean up */
 	g_byte_array_free (bytes, TRUE);
 	
-	/* FIXME bugzilla.eazel.com 1159: do we need to do something more intelligent here? */
+	/* FIXME bugzilla.gnome.org 41159: do we need to do something more intelligent here? */
 	result = do_open (method, method_handle, uri, GNOME_VFS_OPEN_WRITE, context);
 
 	DEBUG_HTTP (("-Create (%d) handle:0x%08x", result, (unsigned int)handle));
@@ -1791,12 +1782,7 @@ process_propfind_propstat (xmlNodePtr node,
 							GNOME_VFS_FILE_INFO_FIELDS_MTIME 
 							| GNOME_VFS_FILE_INFO_FIELDS_CTIME;
 					}
-				} else if (strcmp ((char *)l->name, "nautilus-treat-as-directory") == 0
-					   && l->ns != NULL && l->ns->href != NULL
-					   && strcmp (l->ns->href, EAZEL_XML_NS) == 0
-					   && g_ascii_strcasecmp (node_content_xml, "TRUE") == 0) {
-					treat_as_directory = TRUE;
-				}
+				} 
 				/* Unfortunately, we don't have a mapping for "creationdate" */
 
 				xmlFree (node_content_xml);
@@ -1843,31 +1829,6 @@ process_propfind_propstat (xmlNodePtr node,
 		file_info->valid_fields |= GNOME_VFS_FILE_INFO_FIELDS_TYPE;
 		file_info->type = GNOME_VFS_FILE_TYPE_REGULAR;
 	}
-}
-
-/* The problem here: Eazel Vault returns "https:" URI's which GnomeVFS doesn't recognize
- * So, if it's an https: uri scheme, just change it to "http" and we'll all be happy
- */
-static GnomeVFSURI *
-propfind_href_to_vfs_uri (const char *propfind_href_uri)
-{
-#ifdef THIS_IS_EVIL_AND_NOBODY_NEEDS_IT_ANY_MORE
-	size_t https_len = strlen ("https:");
-	GnomeVFSURI *ret;
-
-	if (strncmp (propfind_href_uri, "https:", https_len) == 0) {
-		char *new_uri;
-		new_uri = g_strconcat ("http:", https_len + propfind_href_uri, NULL);
-		ret = gnome_vfs_uri_new (new_uri);
-		g_free (new_uri);
-	} else {
-		ret = gnome_vfs_uri_new (propfind_href_uri);
-	}
-	
-	return ret;
-#else
-	return gnome_vfs_uri_new (propfind_href_uri);
-#endif
 }
 
 /* a strcmp that doesn't barf on NULLs */
@@ -1921,12 +1882,7 @@ unescape_unreserved_chars (const char *in_string)
 			*write_char++ = *read_char;
 		}
 	}
-	*write_char++ = '\0';
-	
-	if (strlen (in_string) != strlen (ret)) {
-		DEBUG_HTTP (("unescape_unreserved from '%s' to '%s'"));
-	}
-	
+	*write_char++ = '\0';       	
 	
 	return ret;
 }
@@ -1949,19 +1905,21 @@ find_child_node_named (xmlNodePtr node,
 	return NULL;
 }
 
-static guint
-get_propstat_status (xmlNodePtr propstat_node, 
-		     guint *p_status_code)
+/* Look for a <status> tag in the children of node, and returns
+ * the corresponding (HTTP) error code
+ */
+static gboolean
+get_status_node (xmlNodePtr node, guint *status_code)
 {
 	xmlNodePtr status_node;
 	char *status_string;
 	gboolean ret;
 
-	status_node = find_child_node_named (propstat_node, "status");
+	status_node = find_child_node_named (node, "status");
 
 	if (status_node != NULL) {
 		status_string =	xmlNodeGetContent (status_node);
-		ret = parse_status (status_string, p_status_code);
+		ret = parse_status (status_string, status_code);
 		xmlFree (status_string);
 	} else {
 		ret = FALSE;
@@ -1989,7 +1947,7 @@ process_propfind_response(xmlNodePtr n,
 			
 			if (nodecontent != NULL && *nodecontent != '\0' && rv == GNOME_VFS_OK) {
 				gint len;
-				GnomeVFSURI *uri = propfind_href_to_vfs_uri (nodecontent);
+				GnomeVFSURI *uri = gnome_vfs_uri_new (nodecontent);
 				
 				if (uri != NULL) {
 					if ((0 == null_handling_strcmp (base_uri->text, uri->text)) ||
@@ -2015,7 +1973,7 @@ process_propfind_response(xmlNodePtr n,
 
 			xmlFree (nodecontent);
 		} else if (strcmp ((char *)n->name, "propstat") == 0) {
-			if (get_propstat_status (n, &status_code) && status_code == 200) {
+			if (get_status_node (n, &status_code) && status_code == 200) {
 				process_propfind_propstat (n->xmlChildrenNode, file_info);
 			}
 		}
@@ -2046,15 +2004,13 @@ make_propfind_request (HttpFileHandle **handle_return,
 
 	GByteArray *request = g_byte_array_new();
 	char *request_str = "<?xml version=\"1.0\" encoding=\"utf-8\" ?>"
-		"<D:propfind xmlns:D=\"DAV:\" xmlns:ns1000=\"" EAZEL_XML_NS "\">"
+		"<D:propfind xmlns:D=\"DAV:\" >"
 		"<D:prop>"
                 "<D:creationdate/>"
                 "<D:getcontentlength/>"
                 "<D:getcontenttype/>"
                 "<D:getlastmodified/>"
                 "<D:resourcetype/>"
-                "<ns1000:nautilus-treat-as-directory/>"
-		/*"<D:allprop/>"*/
 		"</D:prop>"
 		"</D:propfind>";
 
@@ -2072,7 +2028,7 @@ make_propfind_request (HttpFileHandle **handle_return,
 	result = make_request (handle_return, uri, "PROPFIND", request, 
 			       extraheaders, context);
 	
-	/* FIXME bugzilla.eazel.com 3834: It looks like some http
+	/* FIXME bugzilla.gnome.org 43834: It looks like some http
 	 * servers (eg, www.yahoo.com) treat PROPFIND as a GET and
 	 * return a 200 OK. Others may return access denied errors or
 	 * redirects or any other legal response. This case probably
@@ -2091,7 +2047,6 @@ make_propfind_request (HttpFileHandle **handle_return,
 			if (result != GNOME_VFS_OK ) {
 				break;
 			}
-			
 			xmlParseChunk (parserContext, buffer, bytes_read, 0);
 			buffer[bytes_read]=0;
 		} while (bytes_read > 0);
@@ -2114,19 +2069,29 @@ make_propfind_request (HttpFileHandle **handle_return,
 	}
 	
 	cur = doc->xmlRootNode;
-	
 	if (strcmp ((char *)cur->name, "multistatus") != 0) {
 		DEBUG_HTTP (("Couldn't find <multistatus>.\n"));
 		result = GNOME_VFS_ERROR_GENERIC;
 		goto cleanup;
 	}
-
 	cur = cur->xmlChildrenNode;
 	
 	found_root_node_props = FALSE;
 	while (cur != NULL) {
 		if (strcmp ((char *)cur->name, "response") == 0) {
-			GnomeVFSFileInfo *file_info =
+			GnomeVFSFileInfo *file_info;
+			guint status;
+			
+			/* Some webdav servers (eg resin) put the HTTP status
+			 * code for PROPFIND request in the xml answer instead
+			 * of directly sending a 404 
+			 */
+			if (get_status_node (cur, &status) && !HTTP_20X(status)) {
+				result = http_status_to_vfs_result (status);
+				goto cleanup;
+			}
+			
+			file_info = 
 				process_propfind_response (cur->xmlChildrenNode, uri);
 			
 			if (file_info->name != NULL) { 
@@ -2390,7 +2355,7 @@ do_get_file_info (GnomeVFSMethod *method,
 			}
 			
 			if (result == GNOME_VFS_ERROR_NOT_FOUND) { /* 404 not found */
-				/* FIXME bugzilla.eazel.com 3835: mfleming: Is this code really appropriate?
+				/* FIXME bugzilla.gnome.org 43835: mfleming: Is this code really appropriate?
 				 * In any case, it doesn't seem to be appropriate for a DAV-enabled
 				 * server, since they don't seem to send 301's when you PROPFIND collections
 				 * without a trailing '/'.
@@ -2617,7 +2582,7 @@ do_set_file_info (GnomeVFSMethod *method,
 		return GNOME_VFS_ERROR_NOT_SUPPORTED;
 	}
 	
-	/* FIXME bugzilla.eazel.com 645: Make sure this returns an
+	/* FIXME bugzillagnome.org 40645: Make sure this returns an
 	 * error for incoming names with "/" characters in them,
 	 * instead of moving the file.
 	 */
