@@ -35,9 +35,10 @@ gchar * http_util_base64 (const gchar *text);
 
 #ifdef DEBUG_HTTP_ENABLE
 
-#define DEBUG_HTTP(x) http_debug_printf x
 void http_debug_printf(char *fmt, ...) G_GNUC_PRINTF (1,2);
-/* #define ANALYZE_HTTP(x) my_debug_printf (x) */
+
+#define DEBUG_HTTP(x) http_debug_printf x
+/*#define ANALYZE_HTTP(x) http_debug_printf (x)*/
 #define ANALYZE_HTTP(x) 
 
 #else /* DEBUG_HTTP_ENABLE */
